--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>capstoneProject</name>
+	<name>GetWell-GetFit</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -30,7 +30,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1732590599651</id>
+			<id>0</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
